FIX: z-index for header and modal-window

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -5,7 +5,7 @@
   position: fixed;
   left: 50%;
   transform: translateX(-50%);
-  z-index: 99;
+  z-index: 98;
   padding-top: 16px;
   padding-bottom: 16px;
   outline: 1px solid var(--primaryTextColor);
