--- a/src/components/ModalWindow/ModalWindow.module.scss
+++ b/src/components/ModalWindow/ModalWindow.module.scss
@@ -10,7 +10,7 @@
     justify-content: center;
     align-items: center;
     background-color: rgba(0, 0, 0, 0.5);
-    z-index: 2;
+    z-index: 99;
 }
 
 .modalContent {
@@ -26,7 +26,8 @@
     }
 
     @include mq(desk) {
-        max-width: 1800px;
+        width: 700px;
+        height: 700px;
     }
 }
 
@@ -37,7 +38,8 @@
     border-radius: 16px;
 
     @include mq(desk) {
-        max-height: 800px;
+        width: 600px;
+        height: 600px;
     }
 }
 
